--- a/.github/workflows/web-app-service-pipeline.yml
+++ b/.github/workflows/web-app-service-pipeline.yml
@@ -5,8 +5,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - group2-staging
 
 on:
   push:
-    branches:
-      - staging
+    branches: [ staging, master ]
   workflow_dispatch:
 
 jobs:
@@ -35,9 +34,10 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
+  deploy_staging:
     runs-on: windows-latest
     needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
     
     steps:
       - name: Download artifact from build job
@@ -45,11 +45,31 @@ jobs:
         with:
           name: .net-app
       
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App (Staging)
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'group2-staging'
+          slot-name: 'Production'
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C0F693524F3D4F47A258AA0160E8037C }}
+
+  deploy_production:
+    runs-on: windows-latest
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+      
+      - name: Deploy to Azure Web App (Production)
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'group2-production'
           slot-name: 'Production'
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C0F693524F3D4F47A258AA0160E8037C }}
