--- a/Wed-16.30-MD-G2-Server/Wed-16.30-MD-G2-Server.csproj
+++ b/Wed-16.30-MD-G2-Server/Wed-16.30-MD-G2-Server.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
