--- a/.github/workflows/web-app-service-pipeline.yml
+++ b/.github/workflows/web-app-service-pipeline.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -50,14 +50,11 @@ jobs:
 
       - name: Run tests (Release)
         run: dotnet test --configuration Release --no-restore --logger "trx;LogFileName=test_results.trx"
-
-      - name: Publish test results
-        if: always()
-        uses: dorny/test-reporter@v1
+        
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
         with:
-          name: .NET Tests
-          path: "**/test_results.trx"
-          reporter: dotnet-trx
+          name: test-results
 
   deploy_staging:
     runs-on: windows-latest
