--- a/Wed-16.30-MD-G2-Server/appsettings.json
+++ b/Wed-16.30-MD-G2-Server/appsettings.json
@@ -1,8 +1,17 @@
 {
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=f3d57649-06a5-4957-87dd-db0d6fd61d03;IngestionEndpoint=https://australiaeast-1.in.applicationinsights.azure.com/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
   "AllowedHosts": "*"
