--- a/Wed-16.30-MD-G2-Server/appsettings.json
+++ b/Wed-16.30-MD-G2-Server/appsettings.json
@@ -4,13 +4,25 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Error",
+      "Microsoft.AspNetCore.Mvc.Infrastructure": "Error",
+      "Wed_16._30_MD_G2_Server.Controllers": "Information"
+    },
+    "Console": {
+      "FormatterName": "Json",
+      "FormatterOptions": {
+        "TimestampFormat": "yyyy-MM-dd HH:mm:ss ",
+        "UseUtcTimestamp": true,
+        "IncludeScopes": true,
+        "JsonWriterOptions": {
+          "Indented": false
+        }
+      }
     },
     "ApplicationInsights": {
       "LogLevel": {
-        "Default": "Information"
+        "Default": "Warning"
       }
     }
   },
