--- a/.github/workflows/web-app-service-pipeline.yml
+++ b/.github/workflows/web-app-service-pipeline.yml
@@ -53,6 +53,15 @@ jobs:
           name: test-results
           path: |
             **/test_results.trx
+      
+      - name: Publish test results
+        if: always()
+        uses: dorny/test-reporter@v1
+        with:
+          name: .NET Tests
+          path: |
+            **/test_results.trx
+          reporter: dotnet-trx
 
   deploy_staging:
     runs-on: windows-latest
