--- a/.github/workflows/web-app-service-pipeline.yml
+++ b/.github/workflows/web-app-service-pipeline.yml
@@ -37,22 +37,18 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
 
     steps:
-      - uses: actions/checkout@v4
-
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
 
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+          
       - name: Run tests (Release)
         run: dotnet test --configuration Release --logger "trx;LogFileName=test_results.trx"
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            **/test_results.trx
       
       - name: Publish test results
         if: always()
