--- a/.github/workflows/web-app-service-pipeline.yml
+++ b/.github/workflows/web-app-service-pipeline.yml
@@ -15,7 +15,8 @@ jobs:
       contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
@@ -37,15 +38,13 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: .net-app
           
       - name: Run tests (Release)
         run: dotnet test --configuration Release --logger "trx;LogFileName=test_results.trx"
