fix logging level

--- a/Wed-16.30-MD-G2-Server/appsettings.json
+++ b/Wed-16.30-MD-G2-Server/appsettings.json
@@ -22,7 +22,8 @@
     },
     "ApplicationInsights": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Information",
+        "Wed_16._30_MD_G2_Server.Controllers": "Information"
       }
     }
   },
